2.11.1 (17.02.2021):

* Fix bug importing a DjVu or TIFF with depth > 1 and saving it as PDF with G3/4


2.11.0 (17.01.2021):

* Run started callback before error callback
* + option to navigate through OCR output by position
* Fix hang trying to process page that has been deleted.
* Quit with fatal error if module versions do not match executable version.
  Closes #370 (gscan2pdf opens to white screen).
* Take undo/redo snapshot when adding or correcting OCR text
* Don't lose OCR output when running user-defined tool
* Only update list of user-defined tools on pressing apply in preferences.
* + vertically split screen view for image and OCR output.
* Correct use of dpi option in v4.0.0-beta.1 tesseract call (i.e. Bionic).
* Check that the core font cannot encode the glyphs before using TTF.
* + option to put OCR output to the right of the image, rather than behind it.
* Additionally make source "Normal" a synonym for "flatbed". Closes #371
  (Improve option for auto-select #Pages upon switching ADF/Normal)
* Fix bug estimating height of non-greyscale variable height scans.
  Closes #372 (Scans ignore page size settings using libscan-image front end).
* Update to Hungarian translation (thanks to csola)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.10.2 (17.12.2020):

* Catch errors running default launcher
* Check both stderr and stdout for libtiff-tools version
  Closes Debian bug 977532 (gscan2pdf: save option not available)
* Rename drag tool -> pan tool
* Update to German translation (thanks to Matthias Sprau)
* Update to Turkish translation (thanks to Buckethead)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.10.1 (03.12.2020):

* Switch from Perlmagick to imagemagick for threshold tool to improve
  performance. Closes Debian bug 968918 (Threshold function is extremely slow)
* + missing crop icon
* + View/Edit OCR toggle
* Don't zoom in/out if plus/minus pressed whilst editing OCR
* Allow cut/copy/paste whilst editing OCR