@@ -1,6 +1,8 @@
 2.11.1 (17.02.2021):
 
 * Fix bug importing a DjVu or TIFF with depth > 1 and saving it as PDF with G3/4
+* Remove zip and packbits PDF compression options. Rename PNG->Flate.
+  Closes bug #366 (Rename PDF compression options)
 
 
 2.11.0 (17.01.2021):
